--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+* {
+    font-family: sans-serif;
+}
 h1 {
     color: tomato;
+}
+h2 {
+    background: black;
+    color: white;
+    display: inline-block;
 }
